--- a/src/components/Students/AddStudentForm.module.css
+++ b/src/components/Students/AddStudentForm.module.css
@@ -1,30 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap");
-* {
-    box-sizing: border-box;
-}
-
-html {
-    font-family: "Noto Sans JP", sans-serif;
-}
-
-body {
-    margin: 0;
-    background-color: #dcd8e2;
-}
-
-.wrapper {
-    text-align: center;
-}
-
-.app {
-    width: 90%;
-    max-width: 43rem;
-    padding: 1rem;
-    border-radius: 12px;
-    background-color: white;
-    margin: 3rem auto;
-}
-
 .form-control {
     margin-bottom: 1rem;
 }
@@ -52,7 +25,7 @@ body {
 .form-control input:focus {
     outline: none;
     border-color: #240370;
-    background-color: #7a7a7a;
+    background-color: #cfc2ec;
 }
 
 .control-group {
@@ -74,6 +47,7 @@ button {
     padding: 0.5rem 1.5rem;
     border-radius: 4px;
     cursor: pointer;
+    margin-top: 35px;
 }
 
 button:hover,
@@ -101,7 +75,7 @@ button:disabled:active {
 
 .invalid input {
     border: 1px solid #b40e0e;
-    background-color: #fddddd;
+    background-color: #d88585;
 }
 
 .invalid input:focus {
